--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "appwrite": "^16.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.372.0",
-    "next": "14.2.2",
+    "next": "^14.2.21",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-countup": "^6.5.3",
